aster-core/src/main/gen/AsterParser.java
// Generated from /Users/rpang/IdeaProjects/aster-lang/aster-core/src/main/antlr/AsterParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AsterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, COLON=2, COMMA=3, LPAREN=4, RPAREN=5, LBRACKET=6, RBRACKET=7, LTE=8, 
		GTE=9, NEQ=10, EQUALS=11, PLUS=12, STAR=13, MINUS=14, SLASH=15, LT=16, 
		GT=17, QUESTION=18, AT=19, ARROW=20, STRING_LITERAL=21, BOOL_LITERAL=22, 
		NULL_LITERAL=23, LONG_LITERAL=24, FLOAT_LITERAL=25, INT_LITERAL=26, THIS=27, 
		MODULE=28, IS=29, TO=30, WITH=31, AND=32, OR=33, PRODUCE=34, DEFINE=35, 
		TYPE=36, AS=37, ONE=38, OF=39, USE=40, LET=41, BE=42, RETURN=43, IF=44, 
		ELSE=45, MATCH=46, WHEN=47, NOT=48, START=49, WAIT=50, FOR=51, ASYNC=52, 
		FUNCTION=53, MAP=54, IT=55, PERFORMS=56, TYPE_IDENT=57, IDENT=58, COMMENT=59, 
		NEWLINE=60, WS=61, INDENT=62, DEDENT=63;
	public static final int
		RULE_module = 0, RULE_moduleHeader = 1, RULE_qualifiedName = 2, RULE_qualifiedSegment = 3, 
		RULE_topLevelDecl = 4, RULE_funcDecl = 5, RULE_typeParamList = 6, RULE_typeParam = 7, 
		RULE_paramList = 8, RULE_param = 9, RULE_capabilityAnnotation = 10, RULE_dataDecl = 11, 
		RULE_fieldList = 12, RULE_field = 13, RULE_nameIdent = 14, RULE_enumDecl = 15, 
		RULE_article = 16, RULE_variantList = 17, RULE_importDecl = 18, RULE_importAlias = 19, 
		RULE_typeDecl = 20, RULE_annotation = 21, RULE_annotationArgs = 22, RULE_annotationArg = 23, 
		RULE_annotationValue = 24, RULE_annotatedType = 25, RULE_type = 26, RULE_typeList = 27, 
		RULE_block = 28, RULE_stmt = 29, RULE_letStmt = 30, RULE_defineStmt = 31, 
		RULE_startStmt = 32, RULE_waitStmt = 33, RULE_returnStmt = 34, RULE_ifStmt = 35, 
		RULE_matchStmt = 36, RULE_matchCase = 37, RULE_pattern = 38, RULE_exprStmt = 39, 
		RULE_expr = 40, RULE_comparisonExpr = 41, RULE_additiveExpr = 42, RULE_multiplicativeExpr = 43, 
		RULE_unaryExpr = 44, RULE_postfixExpr = 45, RULE_postfixSuffix = 46, RULE_argumentList = 47, 
		RULE_primaryExpr = 48, RULE_constructExpr = 49, RULE_constructFieldList = 50, 
		RULE_constructField = 51, RULE_operatorCall = 52, RULE_wrapExpr = 53, 
		RULE_listLiteral = 54, RULE_lambdaExpr = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "moduleHeader", "qualifiedName", "qualifiedSegment", "topLevelDecl", 
			"funcDecl", "typeParamList", "typeParam", "paramList", "param", "capabilityAnnotation", 
			"dataDecl", "fieldList", "field", "nameIdent", "enumDecl", "article", 
			"variantList", "importDecl", "importAlias", "typeDecl", "annotation", 
			"annotationArgs", "annotationArg", "annotationValue", "annotatedType", 
			"type", "typeList", "block", "stmt", "letStmt", "defineStmt", "startStmt", 
			"waitStmt", "returnStmt", "ifStmt", "matchStmt", "matchCase", "pattern", 
			"exprStmt", "expr", "comparisonExpr", "additiveExpr", "multiplicativeExpr", 
			"unaryExpr", "postfixExpr", "postfixSuffix", "argumentList", "primaryExpr", 
			"constructExpr", "constructFieldList", "constructField", "operatorCall", 
			"wrapExpr", "listLiteral", "lambdaExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "':'", "','", "'('", "')'", "'['", "']'", "'<='", "'>='", 
			"'!='", "'='", "'+'", "'*'", "'-'", "'/'", "'<'", "'>'", "'?'", "'@'", 
			"'->'", null, null, "'null'", null, null, null, null, "'module'", "'is'", 
			null, "'with'", "'and'", "'or'", "'produce'", "'Define'", "'type'", "'as'", 
			"'one'", "'of'", null, "'Let'", "'be'", "'Return'", "'If'", null, "'Match'", 
			"'When'", "'not'", "'Start'", "'Wait'", "'for'", "'async'", "'function'", 
			"'Map'", "'It'", "'performs'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOT", "COLON", "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"LTE", "GTE", "NEQ", "EQUALS", "PLUS", "STAR", "MINUS", "SLASH", "LT", 
			"GT", "QUESTION", "AT", "ARROW", "STRING_LITERAL", "BOOL_LITERAL", "NULL_LITERAL", 
			"LONG_LITERAL", "FLOAT_LITERAL", "INT_LITERAL", "THIS", "MODULE", "IS", 
			"TO", "WITH", "AND", "OR", "PRODUCE", "DEFINE", "TYPE", "AS", "ONE", 
			"OF", "USE", "LET", "BE", "RETURN", "IF", "ELSE", "MATCH", "WHEN", "NOT", 
			"START", "WAIT", "FOR", "ASYNC", "FUNCTION", "MAP", "IT", "PERFORMS", 
			"TYPE_IDENT", "IDENT", "COMMENT", "NEWLINE", "WS", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AsterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AsterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AsterParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(AsterParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AsterParser.NEWLINE, i);
		}
		public ModuleHeaderContext moduleHeader() {
			return getRuleContext(ModuleHeaderContext.class,0);
		}
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					match(NEWLINE);
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THIS) {
				{
				setState(118);
				moduleHeader();
				}
			}

			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(121);
				match(NEWLINE);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1203665108992L) != 0)) {
				{
				{
				setState(127);
				topLevelDecl();
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(128);
					match(NEWLINE);
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleHeaderContext extends ParserRuleContext {
		public TerminalNode THIS() { return getToken(AsterParser.THIS, 0); }
		public TerminalNode MODULE() { return getToken(AsterParser.MODULE, 0); }
		public TerminalNode IS() { return getToken(AsterParser.IS, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AsterParser.DOT, 0); }
		public ModuleHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterModuleHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitModuleHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitModuleHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleHeaderContext moduleHeader() throws RecognitionException {
		ModuleHeaderContext _localctx = new ModuleHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(THIS);
			setState(142);
			match(MODULE);
			setState(143);
			match(IS);
			setState(144);
			qualifiedName();
			setState(145);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<QualifiedSegmentContext> qualifiedSegment() {
			return getRuleContexts(QualifiedSegmentContext.class);
		}
		public QualifiedSegmentContext qualifiedSegment(int i) {
			return getRuleContext(QualifiedSegmentContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(AsterParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AsterParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualifiedName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			qualifiedSegment();
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(148);
					match(DOT);
					setState(149);
					qualifiedSegment();
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedSegmentContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(AsterParser.IDENT, 0); }
		public TerminalNode TYPE_IDENT() { return getToken(AsterParser.TYPE_IDENT, 0); }
		public QualifiedSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterQualifiedSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitQualifiedSegment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitQualifiedSegment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedSegmentContext qualifiedSegment() throws RecognitionException {
		QualifiedSegmentContext _localctx = new QualifiedSegmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifiedSegment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_la = _input.LA(1);
			if ( !(_la==TYPE_IDENT || _la==IDENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public FuncDeclContext funcDecl() {
			return getRuleContext(FuncDeclContext.class,0);
		}
		public DataDeclContext dataDecl() {
			return getRuleContext(DataDeclContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitTopLevelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_topLevelDecl);
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				funcDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				dataDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				enumDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(160);
				typeDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				importDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDeclContext extends ParserRuleContext {
		public TerminalNode TO() { return getToken(AsterParser.TO, 0); }
		public TerminalNode IDENT() { return getToken(AsterParser.IDENT, 0); }
		public TerminalNode PRODUCE() { return getToken(AsterParser.PRODUCE, 0); }
		public AnnotatedTypeContext annotatedType() {
			return getRuleContext(AnnotatedTypeContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AsterParser.DOT, 0); }
		public TerminalNode COLON() { return getToken(AsterParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(AsterParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TypeParamListContext typeParamList() {
			return getRuleContext(TypeParamListContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AsterParser.COMMA, 0); }
		public CapabilityAnnotationContext capabilityAnnotation() {
			return getRuleContext(CapabilityAnnotationContext.class,0);
		}
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).enterFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsterParserListener ) ((AsterParserListener)listener).exitFuncDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsterParserVisitor ) return ((AsterParserVisitor<? extends T>)visitor).visitFuncDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(TO);
			setState(165);
			match(IDENT);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OF) {
				{
				setState(166);
				typeParamList();
				}
			}

			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(169);
				paramList();
				}
			}

			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(172);
				match(COMMA);
				}
			}

			setState(175);
			match(PRODUCE);
			setState(176);
			annotatedType();
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(177);
				match(DOT);
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IT) {
					{
					setState(178);
					capabilityAnnotation();
					}
				}

				setState(181);
				match(COLON);
				setState(182);
				match(NEWLINE);
				setState(183);
				block();
				}
				break;
			case 2:
				{
				setState(184);
				match(COLON);
				setState(185);
				match(NEWLINE);
				setState(186);
				block();
				}
				break;
			case 3:
				{
				setState(187);
				match(DOT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
